--- a/TrteMrte/TrteMrte/Views/Home/AboutUs.cshtml
+++ b/TrteMrte/TrteMrte/Views/Home/AboutUs.cshtml
@@ -14,7 +14,7 @@
     <div>
         <p>Ova e About us preku index</p>
         <input type="button" value="Simnigo" onclick="location.href='@Url.Action("file","home")'"/>
-   
+        <p>Da go fati ova GIT</p>
         @*@Html.Action("File","Home")*@
     </div>
 </body>
